# tinyml4all-python

./: README.md  pyproject.toml
examples/Chapter2/: capture_colors.py  classify_table.py  describe_table.py  power_transforms.py  process_table.py
examples/Chapter2/sample_data/: FruitChain.h  fruits.csv
examples/Chapter3/: capture_rgb_distance.py  describe_table.py  process_table.py  regress_table.py
examples/Chapter3/sample_data/: DistanceChain.h  people.csv  rgb-distance.csv
examples/Chapter4/: capture_motion.py  describe_motion.py
examples/Chapter5/: capture_magnetometer.py  convert_episodic.py  label_episodic.py  predict_episodic.py
examples/Chapter5/sample_data/: MediaControlChain.h  (+1 more)
examples/Chapter6/: capture_audio.py  describe_audio.py  synthesize_words.py
examples/Chapter7/: capture_images.py  debug_objects.py
examples/Chapter8/: cnn1d.py  cnn2d.py  lstm.py  mlp.py
tinyml4all/audio/: Album.py  AzureTTS.py  WAV.py  __init__.py  capture.py  support.py  synthetis.py
tinyml4all/datasets/: Iris.py  Pets.py  __init__.py
tinyml4all/image/: HTTPD.py  __init__.py  capture.py  debug.py
tinyml4all/support/: Chartjs.py  ChartjsCollection.py  __init__.py  capture.py  colors.py  override_help.py  types.py  userwarn.py
tinyml4all/tabular/: Chain.py  ProcessingBlock.py  __init__.py  capture.py
tinyml4all/tensorflow/: CNN1D.py  CNN2D.py  MLP.py  RNN.py  Report.py  Sequential.py  __init__.py
tinyml4all/time/: Source.py  TimeSeries.py  __init__.py  capture.py
tinyml4all/transpile/: Convertible.py  Jsonable.py  Variable.py  Variables.py
(+154 files in other folders)
